@@ -19,6 +19,7 @@ package org.red5.server.messaging;
  * 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA 
  */
 
+import java.io.IOException;
 import java.util.List;
 import java.util.Map;
 
@@ -34,8 +35,9 @@ public interface IMessageOutput {
 	 * the pusher when output can't handle the message at
 	 * the time.
 	 * @param message Message to be pushed.
+	 * @throws IOException If message could not be written.
 	 */
-	void pushMessage(IMessage message);
+	void pushMessage(IMessage message) throws IOException;
 
 	/**
 	 * Connect to a provider. Note that params passed has nothing to deal with
