@@ -465,7 +465,7 @@ public class ServerStream extends AbstractStream implements IServerStream,
 	}
 
 	/** {@inheritDoc} */
-    public void pushMessage(IPipe pipe, IMessage message) {
+    public void pushMessage(IPipe pipe, IMessage message) throws IOException {
 		pushMessage(message);
 	}
 
@@ -565,7 +565,7 @@ public class ServerStream extends AbstractStream implements IServerStream,
      * Push message
      * @param message     Message
      */
-    private void pushMessage(IMessage message) {
+    private void pushMessage(IMessage message) throws IOException {
 		msgOut.pushMessage(message);
 		recordPipe.pushMessage(message);
 	}
@@ -575,7 +575,11 @@ public class ServerStream extends AbstractStream implements IServerStream,
      */
     private void sendResetMessage() {
         // Send new reset message
-        pushMessage(new ResetMessage());
+    	try {
+    		pushMessage(new ResetMessage());
+    	} catch (IOException err) {
+    		log.error("Error while sending reset message.", err);
+    	}
 	}
 
     /**
@@ -645,7 +649,11 @@ public class ServerStream extends AbstractStream implements IServerStream,
 						return;
 					}
 					vodJobName = null;
-					pushMessage(nextRTMPMessage);
+					try {
+						pushMessage(nextRTMPMessage);
+			    	} catch (IOException err) {
+			    		log.error("Error while sending message.", err);
+			    	}
 					nextRTMPMessage.getBody().release();
 					long start = currentItem.getStart();
 					if (start < 0) {
